5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1577_994.log
== TEST (2019-04-09 18:02:43) 
-- CODE:
print("universidade federal do amazonas")
-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:02:56) 
-- CODE:
print("universidade federal do amazonas")
-- EXECUTION TIME:
0.146539
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:03:06) 
-- CODE:
print("universidade federal do amazonas")
-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:08:52) 
-- CODE:
a = universidade
b = federal do amazonas
pint = ("a+b")
-- ERROR:
File "XXXX", line 2
    b = federal do amazonas
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:10:09) 
-- CODE:
a = ("universidade)
b = ("federal do amzonas")
pint = ("a+b")
-- ERROR:
File "XXXX", line 1
    a = ("universidade)
                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:10:20) 
-- CODE:
a = ("universidade")
b = ("federal do amzonas")
pint = ("a+b")
-- ERROR:
File "XXXX", line 1
    a = ("universidade)
                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:11:36) 
-- CODE:
a = ("universidade federal do amazonas")
print = (a)
-- ERROR:
File "XXXX", line 1
    a = ("universidade)
                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:11:39) 
-- CODE:
a = ("universidade federal do amazonas")
print = (a)
-- ERROR:
File "XXXX", line 1
    a = ("universidade)
                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:11:45) 
-- CODE:
a = ("universidade federal do amazonas")
print = (a)
-- EXECUTION TIME:
0.132301
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:14:11) 
-- CODE:
texto=("universidade federal do amazonas")
print=("texto")
-- ERROR:
File "XXXX", line 1
    a = ("universidade)
                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:16:36) 
-- CODE:
var = input("universidade federal do amazonas: ")

-- ERROR:
File "XXXX", line 1
    a = ("universidade)
                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:16:43) 
-- CODE:
var = input("universidade federal do amazonas: ")

-- ERROR:
File "XXXX", line 1
    a = ("universidade)
                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:16:46) 
-- CODE:
var = input("universidade federal do amazonas: ")

-- EXECUTION TIME:
0.138535
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:17:54) 
-- CODE:
var = input("universidade federal do amazonas")
print(var)
-- OUTPUT:
xx
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:18:04) 
-- CODE:
var = input("universidade federal do amazonas")
print(var)
-- EXECUTION TIME:
0.119592
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
xx
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:19:04) 
-- CODE:
print(universidade federal do amazoas)
-- ERROR:
File "XXXX", line 1
    print(universidade federal do amazoas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:19:11) 
-- CODE:
print(universidade federal do amazoas)
-- ERROR:
File "XXXX", line 1
    print(universidade federal do amazoas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:19:13) 
-- CODE:
print(universidade federal do amazoas)
-- ERROR:
File "XXXX", line 1
    print(universidade federal do amazoas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:19:39) 
-- CODE:
print ("universidade federal do amazoas")
-- OUTPUT:
universidade federal do amazoas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:19:42) 
-- CODE:
print ("universidade federal do amazoas")
-- EXECUTION TIME:
0.173537
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazoas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:19:49) 
-- CODE:
print("universidade federal do amazoas")
-- EXECUTION TIME:
0.183736
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazoas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:19:51) 
-- CODE:
print("universidade federal do amazoas")
-- OUTPUT:
universidade federal do amazoas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:19:52) 
-- CODE:
print("universidade federal do amazoas")
-- EXECUTION TIME:
0.150229
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazoas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:20:20) 
-- CODE:
print("Universidade Federal do Amazoas")
-- OUTPUT:
Universidade Federal do Amazoas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:20:21) 
-- CODE:
print("Universidade Federal do Amazoas")
-- EXECUTION TIME:
0.187632
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazoas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:20:32) 
-- CODE:
print(Universidade Federal do Amazoas)
-- ERROR:
File "XXXX", line 1
    print(Universidade Federal do Amazoas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:21:10) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:21:11) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.135674
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
